--- a/.isort.cfg
+++ b/.isort.cfg
@@ -3,6 +3,6 @@ line_length = 79
 multi_line_output = 0
 known_standard_library = setuptools
 known_first_party = mix
-known_third_party = PIL,addict,allennlp,cloudpickle,cv2,detectron2,fvcore,matplotlib,mmcv,mmf,numpy,portalocker,pycocotools,tabulate,termcolor,torch,torchtext,torchvision,transformers,yapf
+known_third_party =
 no_lines_before = STDLIB,LOCALFOLDER
 default_section = THIRDPARTY
