--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,10 @@ repos:
     rev: 3.8.3
     hooks:
       - id: flake8
-  - repo: https://github.com/asottile/seed-isort-config
-    rev: v2.2.0
-    hooks:
-      - id: seed-isort-config
+#  - repo: https://github.com/asottile/seed-isort-config
+#    rev: v2.2.0
+#    hooks:
+#      - id: seed-isort-config
 #  - repo: https://github.com/timothycrosley/isort
 #    rev: 4.3.21
 #    hooks:
