lmxert code refactored, remove redundant code for lxmert

--- a/.gitignore
+++ b/.gitignore
@@ -127,4 +127,4 @@ work_dirs/
 
 imix/models/vqa_models/vilbert/tools/
 imix/models/vqa_models/oscar/coco_caption/
-mater.code-workspace
+master.code-workspace
