--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,8 @@ itsdangerous==1.1.0
 Jinja2==2.11.2
 jmespath==0.10.0
 joblib==1.0.0
+json-lines==0.5.0
+jsonlines==1.2.0
 jsonnet==0.17.0
 jsonpickle==1.4.2
 kiwisolver==1.3.1
@@ -124,6 +126,7 @@ tabulate==0.8.7
 tensorboard==2.4.0
 tensorboard-plugin-wit==1.7.0
 tensorboardX==2.1
+tensorpack==0.9.4
 termcolor==1.1.0
 terminaltables==3.1.0
 thinc==7.4.5
