--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,8 @@ editdistance==0.5.3
 external==2.0
 fasttext==0.9.1
 filelock==3.0.12
+flask>=1.12  #  for demo
+flask>=3.0.10  #  for demo
 future==0.18.2
 gitdb==4.0.5
 GitPython==3.1.0
@@ -150,4 +152,5 @@ wasabi==0.8.0
 websocket-client==0.57.0
 Werkzeug==1.0.1
 wrapt==1.10.11
+yacs>=0.1.8  #  for demo
 yapf==0.30.0
