--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-allennlp==1.3.0
+allennlp==1.2.2
 anytree==2.8.0
-apex==0.1
+# apex==0.1
 boto3==1.16.46
 botocore==1.19.46
 Cython==0.29.21
@@ -8,17 +8,16 @@ cytoolz==0.9.0.1
 dict==2020.12.3
 docformatter==1.3.1
 easydict==1.9
-external==2.0
 fasttext==0.9.1
-flask>=1.12  #  for demo
-flask>=3.0.10  #  for demo
+flask>=1.12
+flask-cors>=3.0.10
 h5py==3.1.0
 json-lines==0.5.0
 jsonlines==1.2.0
 lmdb==0.98
 lz4==3.1.3
 matplotlib==3.3.3
-mmcv-full @ file:///home/software/pytorch/mmcv_full-1.2.4%2Btorch1.7.0%2Bcu101-cp38-cp38-manylinux1_x86_64.whl
+mmcv-full==1.2.4
 msgpack==0.5.6
 nltk==3.4.5
 numpy==1.19.4
@@ -46,11 +45,11 @@ tensorpack==0.9.4
 termcolor==1.1.0
 terminaltables==3.1.0
 toolz==0.11.1
-torch==1.7.1+cu101
+torch==1.7.1
 torchtext==0.5.0
-torchvision==0.8.2+cu101
+torchvision==0.8.2
 tqdm==4.55.0
 transformers==3.4.0
 values==2020.12.3
-yacs>=0.1.8  #  for demo
+yacs>=0.1.8
 yapf==0.30.0
