--- a/requirements.txt
+++ b/requirements.txt
@@ -28,19 +28,15 @@ portalocker==2.0.0
 pre-commit==2.9.3
 py==1.10.0
 pytorch-pretrained-bert==0.6.2
+recommonmark
 regex==2018.1.10
 requests==2.23.0
 scipy==1.5.4
 six==1.15.0
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
-sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
+sphinx
+sphinx_markdown_tables
+sphinx_rtd_theme
 tabulate==0.8.7
-tensorboard==2.4.0
-tensorboardX==2.1
 tensorpack==0.9.4
 termcolor==1.1.0
 terminaltables==3.1.0
