1.remove apex 2.move refer form vilbert/tools into tools/ 3.modify import refer to try : import refer to avoiding import error   when it was not installed from refer repository 4.remove unused uniter code 5.add refer_python3.py

--- a/.gitignore
+++ b/.gitignore
@@ -125,6 +125,6 @@ work_dirs/
 #sphinx
 #*.rst
 
-imix/models/vqa_models/vilbert/tools/
+tools/refer/
 imix/models/vqa_models/oscar/coco_caption/
 master.code-workspace
