--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "imix/models/vqa_models/vilbert/tools/refer"]
-	path = imix/models/vqa_models/vilbert/tools/refer
+[submodule "tools/refer"]
+	path = tools/refer
 	url = https://github.com/lichengunc/refer.git
